# sickdt

./: .gitignore  Makefile  README.rst  setup.cfg
src/sickdt/: __init__.py  core.py
tests/sickdt/: test_core.py
