[metadata]
name = sickdt
version = 0.1.0-rc1
author = Alexander Juda
# author_email = author@example.com
description = Opinionated wrapper over the built-in ``datetime`` module.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexjuda/sickdt
project_urls =
    Bug Tracker = https://github.com/alexjuda/sickdt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

# define project deps here
# install_requires =
#     numpy
#     matplotlib

# define extras here
[options.extras_require]
dev =
    pytest
    build
    twine

[options.packages.find]
where = src

[flake8]
# Make flake8 compatible with black.
max-line-length = 88
